<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:id="@+id/login_fragment"
            android:layout_height="match_parent"
            android:background="@drawable/login"
            tools:context=".LoginFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/user_name_edit_text"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="100dp"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    app:cornerRadius="10dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_login" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    app:cornerRadius="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/login_button"
                    android:layout_toLeftOf="@id/login_button"
                    android:text="@string/button_cancel" />

        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text=""
                      android:textSize="30dp"
                      android:layout_below="@+id/error_message"
                      android:textColor="#8B0101"
                      android:id="@+id/textview_for_login_success"
            />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text=""
                      android:textSize="30dp"
                      android:textColor="#8B0101"
                      android:id="@+id/error_message"
            />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
